update layout + styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,78 @@
     <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
+    <header>
+        <h1 class="main-title">Kalkulator BMI</h1>
+    </header>
+
+    <main>
+        <aside>
+        <article>
+            <p>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.</p>
+        </article>
+
+        <form>
+            <div>
+                <h3>Jenis Kelamin</h3>
+                <input type="radio" id="laki-laki" name="jenis-kelamin" value="laki-laki"><label for="laki-laki">Laki-laki</label>
+                <input type="radio" id="laki-laki" name="jenis-kelamin" value="Perempuan"><label for="laki-laki">Perempuan</label>
+            </div>
+
+            <div>
+                <h3>Berat Badan (kg)</h3>
+                <label for="quantity"></label>
+                <input type="number" id="quantity" name="quantity" min="1" class="berat">
+
+            </div>
+
+            <div>
+                <h3>Usia (tahun)</h3>
+                <label for="quantity"></label>
+                <input type="number" id="quantity" name="quantity" min="18" class="usia">
+            </div>
+
+            <div>
+                <h3>Tinggi Badan (cm)</h3>
+                <label for="quantity"></label>
+                <input type="number" id="quantity" name="quantity" min="1" class="tinggi">
+            </div>
+
+            <div>
+                <br>
+                <button class="count"><b>Hitung BMI</b></button>
+                <button class="reset">Reset</button>
+            </div>
+        </form>
     
+        <article>
+            <br>
+            <header>
+                <h4>Keunggulan Fitur</h4></header>
+            <p>
+                1. Menghitung berat badan <br>
+                2. Menentukan kategori berat badan ideal atau tidak <br>
+                3. Mempersiapkan program penurunan berat badan
+            </p>
+            <p>
+                <br>
+                Kalkulator ini hanya boleh digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI ini) dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.
+            </p>
+            <p>
+                <br>
+                Kalkulator akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (atau BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI = Kg/M2.
+            </p>
+        </article>
+    </aside>
+
+        <aside>
+            <section>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.</section>
+        </aside>
+        
+    </main>
+
+    <footer>
+        <p>Made by Afrialdho
+        </p>
+    </footer>
 </body>
 </html>
