--- a/index.html
+++ b/index.html
@@ -1,82 +1,46 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
-    <link rel="stylesheet" href="css\style.css">
-</head>
+  <title>BMI Calculator</title>
+     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
+  </head>
 <body>
-    <header>
-        <h1 class="main-title">Kalkulator BMI</h1>
-    </header>
+  <div class="calculator">
+    <h2>Kalkulator BMI</h2>
+    <form action="/action_page.php">
+      <input type="radio" id="laki-laki" name="jenis-kelamin" value="laki-laki">
+      <label for="laki-laki">Pria</label>
+      <input type="radio" id="perempuan" name="jenis-kelamin" value="perempuan">
+      <label for="perempuan">Wanita</label>
+    </form>
+    <label for="weight">Berat (kg):</label>
+    <input id="weight" required="" type="number" />
 
-    <main>
-        <aside>
-        <article>
-            <p>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.</p>
-        </article>
+    <label for="height">Tinggi (cm):</label>
+    <input id="height" required="" type="number" />
 
-        <form>
-            <div>
-                <h3>Jenis Kelamin</h3>
-                <input type="radio" id="laki-laki" name="jenis-kelamin" value="laki-laki"><label for="laki-laki">Laki-laki</label>
-                <input type="radio" id="laki-laki" name="jenis-kelamin" value="Perempuan"><label for="laki-laki">Perempuan</label>
-            </div>
+    <button onclick="calculateBMI()">Hitung BMI</button>
 
-            <div>
-                <h3>Berat Badan (kg)</h3>
-                <label for="quantity"></label>
-                <input type="number" id="quantity" name="quantity" min="1" class="berat">
-
-            </div>
-
-            <div>
-                <h3>Usia (tahun)</h3>
-                <label for="quantity"></label>
-                <input type="number" id="quantity" name="quantity" min="18" class="usia">
-            </div>
-
-            <div>
-                <h3>Tinggi Badan (cm)</h3>
-                <label for="quantity"></label>
-                <input type="number" id="quantity" name="quantity" min="1" class="tinggi">
-            </div>
-
-            <div>
-                <br>
-                <button class="count"><b>Hitung BMI</b></button>
-                <button class="reset">Reset</button>
-            </div>
-        </form>
-    
-        <article>
-            <br>
-            <header>
-                <h4>Keunggulan Fitur</h4></header>
-            <p>
-                1. Menghitung berat badan <br>
-                2. Menentukan kategori berat badan ideal atau tidak <br>
-                3. Mempersiapkan program penurunan berat badan
-            </p>
-            <p>
-                <br>
-                Kalkulator ini hanya boleh digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI ini) dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.
-            </p>
-            <p>
-                <br>
-                Kalkulator akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (atau BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI = Kg/M2.
-            </p>
-        </article>
-    </aside>
-
-        <aside>
-            <section>Berat badan ideal adalah impian semua orang. Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.</section>
-        </aside>
-        
-    </main>
-
-    <footer>
-        <p>Made by Afrialdho
-        </p>
-    </footer>
+    <div id="result"></div>
+  </div>
+  <aside>
+    <br>
+    <div>
+      <b>Kategori Skor BMI</b>
+    </div>
+    <div>
+      <ul>
+        <li>Skor dibawah 18.5, anda dalam kategori kekurangan berat badan</li>
+        <li>Skor 18.6 sampai dengan 24.9, anda berada dalam kategori berat badan yang normal.</li>
+        <li>Skor 25 sampai dengan 29.9, anda berada dalam kategori overweight atau berat badan berlebih.</li>
+        <li>Skor diatas 30, anda berada dalam kategori obesitas.</li>
+      </ul>
+      <hr>
+    </div>
+    <div>Kalkulator ini hanya boleh digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI ini) dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.</div>
+    <br>
+    <div>Kalkulator akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (atau BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI = Kg/M2.
+    </div>
+  </aside>
 </body>
 </html>
